[build-system]
# For each Python version, build against the oldest numpy C_API_VERSION for
# which binary numpy wheels exist, and then the newest version of numpy
# implementing that C_API_VERSION.
requires = [
    "setuptools",
    "wheel",
    "numpy; python_version >= '3.10'",
    "numpy>=1.18.0; python_version < '3.10'",
    "Cython",
]
build-backend = "setuptools.build_meta"


# Tell cibuildwheel to skip all pypy versions, and python 3.10 for macos (currently broken)
[tool.cibuildwheel]

skip = ["pp*", "cp310-macos*"]


[tool.coverage.run]
parallel = true
branch = true
source = ["ecogdata"]

[tool.coverage.paths]
source = ["ecogdata", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true