[metadata]
name = ecogdata
version = 0.2.0
author = mike t
author_email = mtrumpis@gmail.com
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/miketrumpis/ecogdata
description = tools for Viventi Lab ecog data
edit_on_github = False
github_project = miketrumpis/ecogdata

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    numpy>=1.18.0
    lxml
    decorator
    multiprocess
    nitime>=0.8.1
    npTDMS>=0.19.0
    # not sure when dpss got introduced, but 1.1.0 had it
    scipy>=1.1.0
    tqdm
    numexpr
    patsy
    pytest
    PyWavelets
    matplotlib
    scikit-image
    tables
    tblib
    h5py
    seaborn

[options.packages.find]
where = src

[options.extras_require]

test =
    pytest

test_all =
    pytest
    coverage[toml]

docs =
    Sphinx
    sphinx-rtd-theme
    ipykernel
    jupyter
    nbsphinx

[options.package_data]
ecogdata.expconfig = *.txt